--- a/.github/workflows/novnc.yml
+++ b/.github/workflows/novnc.yml
@@ -1,40 +1,37 @@
-name: Ubuntu_noVNC
+name: Ubuntu_Cloudflare_QuickTunnel
 
-on: workflow_dispatch # Kích hoạt thủ công
+on: workflow_dispatch
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Cài đặt môi trường đồ họa
+      - name: Install Desktop Environment
         run: |
           sudo apt update
-          sudo apt install -y xfce4 xfce4-goodies tightvncserver python3-pip
+          sudo apt install -y xfce4 xfce4-goodies tightvncserver
           
-      - name: Cài đặt noVNC
+      - name: Install noVNC
         run: |
           git clone https://github.com/novnc/noVNC.git
           cp noVNC/vnc.html noVNC/index.html
           
-      - name: Cài đặt ngrok
+      - name: Install Cloudflared
         run: |
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt update && sudo apt install ngrok
+          curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
+          sudo dpkg -i cloudflared.deb
 
-      - name: Khởi tạo VNC và ngrok
-        env:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+      - name: Setup VNC and Quick Tunnel
         run: |
-          # Thiết lập pass VNC là '123456'
+          # Thiết lập mật khẩu VNC là 123456
           mkdir -p ~/.vnc
           echo "123456" | vncpasswd -f > ~/.vnc/passwd
           chmod 600 ~/.vnc/passwd
           tightvncserver :1
           
-          # Chạy noVNC proxy trên port 6080
+          # Chạy noVNC proxy
           ./noVNC/utils/novnc_proxy --vnc localhost:5901 --listen 6080 &
           
-          # Mở tunnel qua ngrok
-          ngrok config add-authtoken $NGROK_AUTH_TOKEN
-          ngrok http 6080
+          # Kích hoạt Quick Tunnel
+          echo "Đợi một lát để lấy URL..."
+          cloudflared tunnel --url http://localhost:6080
