--- a/.github/workflows/ssh-mfs.yml
+++ b/.github/workflows/ssh-mfs.yml
@@ -1,4 +1,4 @@
-name: Kali Pro Station
+name: ssh
 on: workflow_dispatch
 
 jobs:
@@ -18,24 +18,28 @@ jobs:
         run: |
           sudo apt-get update
           
-          # 1. Cài đặt Metasploit (Bản chính thức)
+          # 1. Cài đặt Metasploit (Sử dụng gói deb chính thức để tránh lỗi script)
           echo "--- Installing Metasploit ---"
-          curl https://raw.githubusercontent.com/rapid7/metasploit-framework/master/msfupdate | sudo bash
+          curl -s https://raw.githubusercontent.com/rapid7/metasploit-framework/master/msfupdate > msfinstall
+          chmod +x msfinstall
+          sudo ./msfinstall
           
           # 2. Cài đặt Ngrok
           echo "--- Installing Ngrok ---"
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt-get update && sudo apt-get install ngrok
-          # Nếu bạn có NGROK_TOKEN, hãy thêm vào Secret và chạy: ngrok config add-authtoken ${{ secrets.NGROK_TOKEN }}
+          sudo apt-get update && sudo apt-get install -y ngrok
 
-          # 3. Cài đặt Bore (Lệnh cài đặt qua Go)
+          # 3. Cài đặt Bore (Sử dụng Go)
           echo "--- Installing Bore via Go ---"
           sudo apt-get install -y golang
+          # Thiết lập PATH để nhận diện lệnh go ngay lập tức
+          export GOPATH=$HOME/go
+          export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
           go install github.com/ekzhang/bore@latest
-          sudo cp ~/go/bin/bore /usr/local/bin/
+          sudo cp $HOME/go/bin/bore /usr/local/bin/ || sudo cp /home/runner/go/bin/bore /usr/local/bin/
 
-          # 4. Thiết lập User & SSH
+          # 4. Cấu hình SSH (Không mật khẩu)
           sudo passwd -d runner
           echo "PermitEmptyPasswords yes" | sudo tee -a /etc/ssh/sshd_config
           echo "UsePAM no" | sudo tee -a /etc/ssh/sshd_config
@@ -43,13 +47,12 @@ jobs:
 
       - name: System Info & Ready
         run: |
-          echo "================================================="
-          echo "KALI STATION IS READY!"
-          echo "Tailscale IP: $(tailscale ip -4)"
-          echo "Metasploit: msfconsole -v"
-          echo "Bore: bore local 8080 --to bore.pub"
-          echo "Kết nối: ssh runner@kali-station"
-          echo "================================================="
+          echo "================================================"
+          echo "KALI STATION READY!"
+          echo "IP: $(tailscale ip -4)"
+          echo "MSF Version: $(msfconsole -v)"
+          echo "Lệnh SSH: ssh runner@kali-station"
+          echo "================================================"
           
       - name: Keep Alive
         run: sleep 21600
