--- a/.github/workflows/phone.yml
+++ b/.github/workflows/phone.yml
@@ -1,4 +1,4 @@
-name: Android Cloud Phone
+name: Android Cloud Phone Fixed
 on: workflow_dispatch
 
 jobs:
@@ -11,31 +11,46 @@ jobs:
           authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
           args: --ssh --hostname=cloud-phone
 
-      - name: Install Desktop & Docker Android
+      - name: Fix Dependencies and Install Docker
         run: |
+          # 1. Gỡ bỏ các gói gây xung đột
+          sudo apt-get remove -y containerd.io containerd runc
+          
+          # 2. Cài đặt Docker sạch
           sudo apt-get update
-          # Cài đặt Docker
           sudo apt-get install -y docker.io
           
-          # Chạy Redroid (Android 11 trên Docker - Nhẹ và mượt nhất cho Cloud)
+          # 3. Nạp module hạt nhân (Cực kỳ quan trọng cho Android)
+          # GitHub Runner cho phép nạp binder_linux để Android chạy mượt
+          sudo modprobe binder_linux devices="binder,hwbinder,vndbinder"
+          sudo modprobe ashmem_linux
+
+      - name: Launch Redroid (Android 11)
+        run: |
+          # Chạy Android 11 với cấu hình tối ưu
           sudo docker run -d -p 5555:5555 \
             --name redroid11 \
             --privileged \
+            --pull always \
             redroid/redroid:11.0.0-latest \
             androidboot.redroid_width=720 \
             androidboot.redroid_height=1280 \
-            androidboot.redroid_dpi=320
+            androidboot.redroid_dpi=320 \
+            androidboot.redroid_fps=30
 
-          # Cài đặt Web-ADB (Để điều khiển qua trình duyệt)
-          sudo docker run -d -p 8080:80 \
+      - name: Setup Web Control (Cloud Interface)
+        run: |
+          # Chạy giao diện điều khiển trên trình duyệt
+          sudo docker run -d -p 80:80 \
             --name web-adb \
-            -e ADB_SERVER_SOCKET=tcp:$(tailscale ip -4):5555 \
+            --pull always \
             yumechan/ya-webadb:latest
 
           echo "================================================"
-          echo "Android đang khởi động..."
-          echo "Truy cập Cloud Phone qua trình duyệt tại địa chỉ:"
-          echo "http://$(tailscale ip -4):8080"
+          echo "Android đang khởi động (mất khoảng 1-2 phút)..."
+          echo "Địa chỉ Cloud Phone của bạn:"
+          echo "http://$(tailscale ip -4)"
           echo "================================================"
-          
-          sleep 21600
+
+      - name: Keep Alive
+        run: sleep 21600
