--- a/.github/workflows/phone.yml
+++ b/.github/workflows/phone.yml
@@ -1,4 +1,4 @@
-name: Android Cloud Phone Fixed
+name: Android Cloud Phone Azure-Fix
 on: workflow_dispatch
 
 jobs:
@@ -11,45 +11,41 @@ jobs:
           authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
           args: --ssh --hostname=cloud-phone
 
-      - name: Fix Dependencies and Install Docker
+      - name: Install Docker and Setup
         run: |
-          # 1. Gỡ bỏ các gói gây xung đột
+          # Gỡ xung đột và cài Docker sạch
           sudo apt-get remove -y containerd.io containerd runc
-          
-          # 2. Cài đặt Docker sạch
           sudo apt-get update
           sudo apt-get install -y docker.io
           
-          # 3. Nạp module hạt nhân (Cực kỳ quan trọng cho Android)
-          # GitHub Runner cho phép nạp binder_linux để Android chạy mượt
-          sudo modprobe binder_linux devices="binder,hwbinder,vndbinder"
-          sudo modprobe ashmem_linux
+          # Không dùng modprobe vì Kernel Azure không hỗ trợ trực tiếp
+          # Chúng ta sẽ ép Redroid sử dụng bộ nhớ mô phỏng
 
-      - name: Launch Redroid (Android 11)
+      - name: Launch Redroid (Special Config for Azure)
         run: |
-          # Chạy Android 11 với cấu hình tối ưu
+          # Dùng mode privileged và các tham số ép buộc để Android tự khởi tạo bộ nhớ
           sudo docker run -d -p 5555:5555 \
             --name redroid11 \
             --privileged \
-            --pull always \
             redroid/redroid:11.0.0-latest \
             androidboot.redroid_width=720 \
             androidboot.redroid_height=1280 \
             androidboot.redroid_dpi=320 \
-            androidboot.redroid_fps=30
+            androidboot.redroid_fps=30 \
+            redroid.gpu.mode=guest \
+            redroid.behold=1
 
-      - name: Setup Web Control (Cloud Interface)
+      - name: Setup Web-ADB Control
         run: |
-          # Chạy giao diện điều khiển trên trình duyệt
+          # Chạy giao diện Web trên cổng 80
           sudo docker run -d -p 80:80 \
             --name web-adb \
-            --pull always \
             yumechan/ya-webadb:latest
 
           echo "================================================"
-          echo "Android đang khởi động (mất khoảng 1-2 phút)..."
-          echo "Địa chỉ Cloud Phone của bạn:"
-          echo "http://$(tailscale ip -4)"
+          echo "Android đang khởi chạy trên Kernel Azure..."
+          echo "IP: $(tailscale ip -4)"
+          echo "Hãy đợi 2-3 phút để Android boot xong rồi mới truy cập."
           echo "================================================"
 
       - name: Keep Alive
